--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
     .letter-container {
       display: inline-block;
       text-align: center;
-      margin: 0 20px;
-      width: 50px;
-    }
-    .symbol-slot-top, .symbol-slot-bottom {
-      min-height: 30px;
-      border: 2px dashed #aaa;
-      margin: 5px;
-      padding: 2px;
+      margin: 0 30px;
+      width: 60px;
     }
     .letter-display {
       font-size: 2em;
-      margin: 5px 0;
+      margin: 40px 0;
+      cursor: pointer;
+      position: relative;
+    }
+    .circled {
+      border: 2px solid black;
+      border-radius: 50%;
+      padding: 5px 10px;
+      display: inline-block;
     }
     .draggable {
       display: inline-block;
@@ -41,6 +43,7 @@
       cursor: grab;
       background: #f9f9f9;
       border: 2px solid #000;
+      position: relative;
     }
     .symbol-container {
       margin-bottom: 20px;
@@ -58,6 +61,11 @@
       background-color: rgba(255, 255, 255, 0.6);
       pointer-events: none;
     }
+    #word-display {
+      position: relative;
+      height: 300px;
+      margin-bottom: 30px;
+    }
   </style>
 </head>
 <body>
@@ -67,18 +75,10 @@
   <button onclick="renderWord()">Render</button>
   <button onclick="resetSymbols()">Reset Symbols</button>
 
-  <div id="word-display" style="position: relative;"></div>
+  <div id="word-display"></div>
 
   <div class="symbol-container">
-    <div id="symbols">
-      <div class="draggable v-symbol" draggable="true" ondragstart="drag(event)" id="symbol-v">V</div>
-      <div class="draggable c-symbol" draggable="true" ondragstart="drag(event)" id="symbol-c">C</div>
-      <div class="draggable" draggable="true" ondragstart="drag(event)" id="symbol-breve">˘</div>
-      <div class="draggable" draggable="true" ondragstart="drag(event)" id="symbol-macron">¯</div>
-      <div class="draggable" draggable="true" ondragstart="drag(event)" id="symbol-dot">.</div>
-      <div class="draggable" draggable="true" ondragstart="drag(event)" id="symbol-pipe">/</div>
-      <div class="draggable" draggable="true" ondragstart="dragCircle(event)" id="symbol-circle">◯</div>
-    </div>
+    <div id="symbols"></div>
   </div>
 
   <div id="legend">
@@ -112,22 +112,16 @@
       dragSymbol = event.target.cloneNode(true);
     }
 
-    function drop(event) {
+    function dropAnywhere(event) {
       event.preventDefault();
       if (dragSymbol) {
-        if (isCircle) {
-          const wordDisplay = document.getElementById("word-display");
-          const newCircle = document.createElement("div");
-          newCircle.className = "multi-letter-wrapper";
-          newCircle.style.left = (event.offsetX - 20) + 'px';
-          newCircle.style.top = (event.offsetY - 20) + 'px';
-          newCircle.textContent = '◯';
-          wordDisplay.appendChild(newCircle);
-        } else {
-          dragSymbol.setAttribute("draggable", false);
-          dragSymbol.style.cursor = "default";
-          event.target.appendChild(dragSymbol);
-        }
+        const symbol = dragSymbol.cloneNode(true);
+        symbol.style.position = 'absolute';
+        symbol.style.left = `${event.clientX - 20}px`;
+        symbol.style.top = `${event.clientY - 40}px`;
+        symbol.setAttribute("draggable", false);
+        symbol.style.cursor = "default";
+        document.getElementById("word-display").appendChild(symbol);
       }
     }
 
@@ -136,28 +130,19 @@
       const display = document.getElementById("word-display");
       display.innerHTML = "";
 
-      for (let letter of input) {
+      for (let i = 0; i < input.length; i++) {
+        const letter = input[i];
         const container = document.createElement("div");
         container.className = "letter-container";
-
-        const topSlot = document.createElement("div");
-        topSlot.className = "symbol-slot-top";
-        topSlot.ondragover = allowDrop;
-        topSlot.ondrop = drop;
 
         const middle = document.createElement("div");
         middle.className = "letter-display";
         middle.textContent = letter;
+        middle.onclick = () => {
+          middle.classList.toggle("circled");
+        };
 
-        const bottomSlot = document.createElement("div");
-        bottomSlot.className = "symbol-slot-bottom";
-        bottomSlot.ondragover = allowDrop;
-        bottomSlot.ondrop = drop;
-
-        container.appendChild(topSlot);
         container.appendChild(middle);
-        container.appendChild(bottomSlot);
-
         display.appendChild(container);
       }
     }
@@ -189,6 +174,8 @@
     }
 
     resetSymbols();
+    document.getElementById("word-display").addEventListener("dragover", allowDrop);
+    document.getElementById("word-display").addEventListener("drop", dropAnywhere);
   </script>
 
 </body>
