--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     }
     #word-input {
       margin-bottom: 20px;
+      font-size: 1.2em;
+      padding: 5px;
     }
     .letter-container {
       display: inline-block;
@@ -21,14 +23,7 @@
     .letter-display {
       font-size: 2em;
       margin: 40px 0;
-      cursor: pointer;
       position: relative;
-    }
-    .circled {
-      border: 2px solid black;
-      border-radius: 50%;
-      padding: 5px 10px;
-      display: inline-block;
     }
     .draggable {
       display: inline-block;
@@ -59,12 +54,14 @@
       border-radius: 50%;
       padding: 5px;
       background-color: rgba(255, 255, 255, 0.6);
-      pointer-events: none;
+      resize: both;
+      overflow: hidden;
     }
     #word-display {
       position: relative;
       height: 300px;
       margin-bottom: 30px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
@@ -72,8 +69,7 @@
 
   <h1>Syllable Mapper</h1>
   <input id="word-input" type="text" placeholder="Type a word here...">
-  <button onclick="renderWord()">Render</button>
-  <button onclick="resetSymbols()">Reset Symbols</button>
+  <button onclick="resetSymbols()">Reset</button>
 
   <div id="word-display"></div>
 
@@ -96,19 +92,12 @@
 
   <script>
     let dragSymbol;
-    let isCircle = false;
 
     function allowDrop(event) {
       event.preventDefault();
     }
 
     function drag(event) {
-      isCircle = false;
-      dragSymbol = event.target.cloneNode(true);
-    }
-
-    function dragCircle(event) {
-      isCircle = true;
       dragSymbol = event.target.cloneNode(true);
     }
 
@@ -117,12 +106,35 @@
       if (dragSymbol) {
         const symbol = dragSymbol.cloneNode(true);
         symbol.style.position = 'absolute';
-        symbol.style.left = `${event.clientX - 20}px`;
-        symbol.style.top = `${event.clientY - 40}px`;
+        symbol.style.left = `${event.offsetX - 20}px`;
+        symbol.style.top = `${event.offsetY - 20}px`;
         symbol.setAttribute("draggable", false);
-        symbol.style.cursor = "default";
+        symbol.style.cursor = "move";
+        symbol.onmousedown = dragMove;
         document.getElementById("word-display").appendChild(symbol);
       }
+    }
+
+    function dragMove(e) {
+      e.preventDefault();
+      const el = e.target;
+      const shiftX = e.clientX - el.getBoundingClientRect().left;
+      const shiftY = e.clientY - el.getBoundingClientRect().top;
+
+      function moveAt(pageX, pageY) {
+        el.style.left = pageX - shiftX + 'px';
+        el.style.top = pageY - shiftY + 'px';
+      }
+
+      function onMouseMove(event) {
+        moveAt(event.pageX, event.pageY);
+      }
+
+      document.addEventListener('mousemove', onMouseMove);
+      el.onmouseup = function () {
+        document.removeEventListener('mousemove', onMouseMove);
+        el.onmouseup = null;
+      };
     }
 
     function renderWord() {
@@ -138,9 +150,6 @@
         const middle = document.createElement("div");
         middle.className = "letter-display";
         middle.textContent = letter;
-        middle.onclick = () => {
-          middle.classList.toggle("circled");
-        };
 
         container.appendChild(middle);
         display.appendChild(container);
@@ -150,6 +159,8 @@
     function resetSymbols() {
       const symbolContainer = document.getElementById("symbols");
       symbolContainer.innerHTML = "";
+      const display = document.getElementById("word-display");
+      display.innerHTML = "";
 
       const symbols = [
         { id: 'symbol-v', text: 'V', className: 'v-symbol' },
@@ -158,7 +169,7 @@
         { id: 'symbol-macron', text: '¯' },
         { id: 'symbol-dot', text: '.' },
         { id: 'symbol-pipe', text: '/' },
-        { id: 'symbol-circle', text: '◯', circle: true },
+        { id: 'symbol-circle', text: '◯' },
       ];
 
       for (let sym of symbols) {
@@ -168,14 +179,21 @@
         el.setAttribute("draggable", true);
         el.setAttribute("id", sym.id);
         el.textContent = sym.text;
-        el.ondragstart = sym.circle ? dragCircle : drag;
+        el.ondragstart = drag;
         symbolContainer.appendChild(el);
       }
     }
 
     resetSymbols();
+
     document.getElementById("word-display").addEventListener("dragover", allowDrop);
     document.getElementById("word-display").addEventListener("drop", dropAnywhere);
+
+    document.getElementById("word-input").addEventListener("keypress", function (e) {
+      if (e.key === 'Enter') {
+        renderWord();
+      }
+    });
   </script>
 
 </body>
